--- a/app.html
+++ b/app.html
@@ -5,38 +5,60 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
+      html,
+      body {
+        height: 100%;
+      }
+
       body {
         margin: 0;
         font-family: sans-serif;
       }
 
-      canvas#app {
+      canvas#app1 {
         position: absolute;
       }
 
-      #send {
+      #send1 {
         position: absolute;
         top: 1rem;
         left: 1rem;
       }
 
-      #output {
+      #output1 {
         color: #fff;
         position: absolute;
         top: 2rem;
         left: 1rem;
       }
+
+      #app2 {
+        background-color: #000;
+        color: #fff;
+        display: flex;
+        flex-wrap: wrap;
+        overflow: auto;
+      }
+
+      .box {
+        /* border: 1px solid #fff; */
+      }
+      .box:hover {
+        background-color: #fff;
+      }
+      .box.selected {
+        background-color: #fff;
+      }
     </style>
   </head>
   <body>
-    <canvas id="app"></canvas>
-    <button id="send">Send</button>
-    <div id="output"></div>
-
-    <script>
-      const appCanvas = document.getElementById("app");
-      const sendButton = document.getElementById("send");
-      const output = document.getElementById("output");
+    <!-- <canvas id="app1"></canvas>
+    <button id="send1">Send</button>
+    <div id="output1"></div> -->
+    <!-- <script>
+      const appCanvas = document.getElementById("app1");
+      const sendButton = document.getElementById("send1");
+      const output = document.getElementById("output1");
       const draw = appCanvas.getContext("2d");
       const server = new WebSocket("ws://localhost:8080");
       const WIDTH = window.innerWidth;
@@ -84,6 +106,51 @@
         const element = document.createElement("p");
         element.textContent = message;
         output.appendChild(element);
+      }
+    </script> -->
+
+    <script>
+      const WIDTH = window.innerWidth;
+      const HEIGHT = window.innerHeight;
+      const BOX_COUNT = 50;
+      const BOX_SIZE = 10;
+
+      const app = document.createElement("div");
+      app.id = "app2";
+      // app.style.width = `${WIDTH}px`;
+      // app.style.height = `${HEIGHT}px`;
+      document.body.appendChild(app);
+
+      const server = new WebSocket("ws://localhost:8080");
+
+      server.onmessage = (event) => {
+        console.log(event);
+        const { boxes, updatedBoxId } = JSON.parse(event.data);
+        if (boxes) {
+          for (const boxId of boxes) {
+            const box = document.createElement("div");
+            box.classList.add("box");
+            box.style.width = `${BOX_SIZE}px`;
+            box.style.height = `${BOX_SIZE}px`;
+            box.id = boxId;
+            box.addEventListener("click", () => {
+              server.send(JSON.stringify({ updatedBoxId: boxId }));
+            });
+            app.appendChild(box);
+          }
+        } else if (updatedBoxId) {
+          updateBox(updatedBoxId);
+        }
+      };
+
+      function updateBox(boxId) {
+        const box = document.getElementById(boxId);
+        const boxSelected = box.classList.contains("selected");
+        if (boxSelected) {
+          box.classList.remove("selected");
+        } else {
+          box.classList.add("selected");
+        }
       }
     </script>
   </body>
