add static folder

--- a/app.html
+++ b/app.html
@@ -3,155 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <style>
-      html,
-      body {
-        height: 100%;
-      }
-
-      body {
-        margin: 0;
-        font-family: sans-serif;
-      }
-
-      canvas#app1 {
-        position: absolute;
-      }
-
-      #send1 {
-        position: absolute;
-        top: 1rem;
-        left: 1rem;
-      }
-
-      #output1 {
-        color: #fff;
-        position: absolute;
-        top: 2rem;
-        left: 1rem;
-      }
-
-      #app2 {
-        background-color: #000;
-        color: #fff;
-        display: flex;
-        flex-wrap: wrap;
-        overflow: auto;
-      }
-
-      .box {
-        /* border: 1px solid #fff; */
-      }
-      .box:hover {
-        background-color: #fff;
-      }
-      .box.selected {
-        background-color: #fff;
-      }
-    </style>
+    <title>PXLZ</title>
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <!-- <canvas id="app1"></canvas>
-    <button id="send1">Send</button>
-    <div id="output1"></div> -->
-    <!-- <script>
-      const appCanvas = document.getElementById("app1");
-      const sendButton = document.getElementById("send1");
-      const output = document.getElementById("output1");
-      const draw = appCanvas.getContext("2d");
-      const server = new WebSocket("ws://localhost:8080");
-      const WIDTH = window.innerWidth;
-      const HEIGHT = window.innerHeight;
-      const userId = Math.floor(Math.random() * 10000);
-      const data = { userId, message: `Hello from user ${userId}` };
-      const serialisedData = JSON.stringify(data);
-
-      appCanvas.width = WIDTH;
-      appCanvas.height = HEIGHT;
-
-      draw.fillStyle = "#000";
-      draw.fillRect(0, 0, WIDTH, HEIGHT);
-
-      appCanvas.addEventListener("mousemove", (e) => {
-        console.log(e);
-        const mousePosition = { userId, mouseX: e.clientX, mouseY: e.clientY };
-        draw.fillColor = "#fff";
-        draw.fillRect(mousePosition.mouseX, mousePosition.mouseY, 10, 10);
-        server.send(JSON.stringify(mousePosition));
-      });
-
-      sendButton.addEventListener("click", () => {
-        server.send(serialisedData);
-      });
-
-      server.onmessage = (event) => {
-        console.log(event);
-        const deserialisedData = JSON.parse(event.data);
-        if (deserialisedData.mouseX || deserialisedData.mouseY) {
-          // updateOutput(`${deserialisedData.mouseX} ${deserialisedData.mouseY}`);
-          draw.fillStyle = "#fff";
-          draw.fillRect(
-            deserialisedData.mouseX,
-            deserialisedData.mouseY,
-            10,
-            10
-          );
-        } else {
-          updateOutput(deserialisedData.message);
-        }
-      };
-
-      function updateOutput(message) {
-        const element = document.createElement("p");
-        element.textContent = message;
-        output.appendChild(element);
-      }
-    </script> -->
-
-    <script>
-      const WIDTH = window.innerWidth;
-      const HEIGHT = window.innerHeight;
-      const BOX_COUNT = 50;
-      const BOX_SIZE = 10;
-
-      const app = document.createElement("div");
-      app.id = "app2";
-      // app.style.width = `${WIDTH}px`;
-      // app.style.height = `${HEIGHT}px`;
-      document.body.appendChild(app);
-
-      const server = new WebSocket("ws://localhost:8080");
-
-      server.onmessage = (event) => {
-        console.log(event);
-        const { boxes, updatedBoxId } = JSON.parse(event.data);
-        if (boxes) {
-          for (const boxId of boxes) {
-            const box = document.createElement("div");
-            box.classList.add("box");
-            box.style.width = `${BOX_SIZE}px`;
-            box.style.height = `${BOX_SIZE}px`;
-            box.id = boxId;
-            box.addEventListener("click", () => {
-              server.send(JSON.stringify({ updatedBoxId: boxId }));
-            });
-            app.appendChild(box);
-          }
-        } else if (updatedBoxId) {
-          updateBox(updatedBoxId);
-        }
-      };
-
-      function updateBox(boxId) {
-        const box = document.getElementById(boxId);
-        const boxSelected = box.classList.contains("selected");
-        if (boxSelected) {
-          box.classList.remove("selected");
-        } else {
-          box.classList.add("selected");
-        }
-      }
-    </script>
+    <script src="js/script.js"></script>
   </body>
 </html>
